--- a/etc/debade/debade.conf
+++ b/etc/debade/debade.conf
@@ -2,14 +2,14 @@
     ## 作为连接rabbitMQ Server的客户端的配置
     "master": {
         ## rabbitMQ的地址
-        "server": "localhost",
+        "server": "rabbitmq.debade",
         "port": 5672,
         "user": "guest",
         "password": "guest"
     },
     ## 依赖redis
     "redis": {
-        "host": "localhost",
+        "host": "redis.debade",
         "port": 80,
         "channel": "debade"
     }
